# llmock

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.yaml  justfile  pyproject.toml
.agents/skills/openai-types/: SKILL.md
.agents/skills/pytest/: SKILL.md
.github/workflows/: ci.yml  docker.yml
docs/: ARCHITECTURE.md  DECISIONS.md
docs/architecture/: DECISIONS.md
docs/learnings/: INSTRUCTION_UPDATES.md
docs/llmock-skill/: SKILL.md
docs/llmock-skill/references/: config.yaml
docs/skills/: openai-types.md
src/llmock/: __init__.py  __main__.py  app.py  config.py  history_store.py
src/llmock/routers/: chat.py  history.py  models.py  responses.py
src/llmock/schemas/: __init__.py  chat.py  models.py  responses.py
src/llmock/strategies/: __init__.py  base.py  content_mirror.py  factory.py  strategy_composition.py  strategy_content_mirror.py  strategy_custom_answers.py  strategy_error.py  strategy_tool_call.py
src/llmock/utils/: __init__.py  chat.py
src/llmock3/: __init__.py  __main__.py  app.py  config.py
src/llmock3/routers/: health.py  models.py
src/llmock3/schemas/: __init__.py  models.py
tests/: __init__.py  conftest.py  test_api_key.py  test_chat.py  test_chat_tool_calls.py  test_composition_strategy.py  test_config.py  test_custom_answers_strategy.py  test_error_strategy.py  test_factory.py  test_health.py  test_history.py  test_models.py  test_responses.py  test_responses_tool_calls.py  test_skill_config_sync.py  test_strategies.py
